load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@rules_go//go:def.bzl", "go_cross_binary")
load("@rules_img//img:image.bzl", "image_index", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:load.bzl", "image_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Build an mtail binary for supported platforms.
PLATFORMS = [
    "linux_386",
    "linux_amd64",
    "linux_arm64",
    "windows_386",
    "windows_amd64",
    "windows_arm64",
    "darwin_amd64",
    "darwin_arm64",
]

[
    go_cross_binary(
        name = "mtail_" + platform,
        platform = "@rules_go//go/toolchain:" + platform,
        target = "//cmd/mtail",
    )
    for platform in PLATFORMS
]

filegroup(
    name = "cross_build",
    srcs = [":mtail_" + platform for platform in PLATFORMS],
)

[
    pkg_tar(
        name = "tarball_" + platform,
        srcs = [
            ":mtail_" + platform,
            "//:docs",
        ],
        out = "mtail_" + platform + ".tar.gz",
        extension = "tar.gz",
        stamp = -1,
    )
    for platform in PLATFORMS
]

image_layer(
    name = "mtail_layer",
    srcs = {
        "/mtail": "//cmd/mtail",
    },
)

_TIMESTAMP_STRING = "2006-01-02T15:04:05Z"

expand_template(
    name = "timestamp",
    out = "timestamp.txt",
    stamp_substitutions = {
        _TIMESTAMP_STRING: "{{BUILD_TIMESTAMP_ISO8601}}",
    },
    template = [_TIMESTAMP_STRING],
)

image_manifest(
    name = "manifest",
    base = "@distroless_base",
    config_fragment = "config.json",
    created = ":timestamp",
    entrypoint = ["/mtail"],
    labels = {
        "org.opencontainers.image.ref.name": "jaqx0r/mtail",
        "org.opencontainers.image.title": "mtail",
        "org.opencontainers.image.description": "extract internal monitoring data from application logs for collection in a timeseries database",
        "org.opencontainers.image.authors": "Jamie Wilkinson (@jaqx0r)",
        "org.opencontainers.image.licenses": "Apache-2.0",
        "org.opencontainers.image.version": "{{if .STABLE_GIT_SEMVER}}{{.STABLE_GIT_SEMVER}}{{else}}0.0.0{{end}}",
        "org.opencontainers.image.revision": "{{if .STABLE_GIT_REVISION}}{{.STABLE_GIT_REVISION}}{{else}}unknown{{end}}",
        "org.opencontainers.image.source": "https://github.com/jaqx0r/mtail/",
        "org.opencontainers.image.documentation": "https://jaqx0r.github.io/mtail/",
        "org.opencontainers.image.created": "{{.BUILD_TIMESTAMP}}",
        "org.opencontainers.image.url": "https://github.com/jaqx0r/mtail",
    },
    layers = [":mtail_layer"],
)

image_index(
    name = "image",
    manifests = [":manifest"],
    platforms = [
        ":linux_amd64",
        ":linux_arm64v8",
    ],
)

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_arm64v8",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

image_load(
    name = "load_image",
    image = ":image",
    tag_list = ["mtail:latest"],
)
