load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mdot_lib",
    srcs = ["main.go"],
    importpath = "github.com/google/mtail/cmd/mdot",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/mtail",
        "//internal/runtime/compiler/ast",
        "//internal/runtime/compiler/checker",
        "//internal/runtime/compiler/parser",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "mdot",
    embed = [":mdot_lib"],
    visibility = ["//visibility:public"],
)
