load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mfmt_lib",
    srcs = ["main.go"],
    importpath = "github.com/google/mtail/cmd/mfmt",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/runtime/compiler/checker",
        "//internal/runtime/compiler/parser",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "mfmt",
    embed = [":mfmt_lib"],
    visibility = ["//visibility:public"],
)
