load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mtail_lib",
    srcs = ["main.go"],
    importpath = "github.com/google/mtail/cmd/mtail",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/exporter",
        "//internal/metrics",
        "//internal/mtail",
        "//internal/waker",
        "@com_github_golang_glog//:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
    ],
)

go_binary(
    name = "mtail",
    embed = [":mtail_lib"],
    visibility = ["//visibility:public"],
)
