load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "exporter",
    srcs = [
        "collectd.go",
        "export.go",
        "graphite.go",
        "json.go",
        "prometheus.go",
        "statsd.go",
        "varz.go",
    ],
    importpath = "github.com/google/mtail/internal/exporter",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/metrics",
        "//internal/metrics/datum",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//expfmt:go_default_library",
    ],
)

go_test(
    name = "exporter_test",
    size = "small",
    srcs = [
        "export_test.go",
        "graphite_test.go",
        "json_test.go",
        "prometheus_test.go",
        "varz_test.go",
    ],
    embed = [":exporter"],
    deps = [
        "//internal/metrics",
        "//internal/metrics/datum",
        "//internal/testutil",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
    ],
)
