load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "waker",
    srcs = [
        "testwaker.go",
        "timedwaker.go",
        "waker.go",
    ],
    importpath = "github.com/google/mtail/internal/waker",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)

go_test(
    name = "waker_test",
    srcs = [
        "testwaker_test.go",
        "timedwaker_test.go",
    ],
    deps = [":waker"],
)
