load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vm",
    srcs = ["vm.go"],
    importpath = "github.com/google/mtail/internal/runtime/vm",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/logline",
        "//internal/metrics",
        "//internal/metrics/datum",
        "//internal/runtime/code",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_groupcache//lru:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)

go_test(
    name = "vm_test",
    srcs = ["vm_test.go"],
    embed = [":vm"],
    deps = [
        "//internal/logline",
        "//internal/metrics",
        "//internal/metrics/datum",
        "//internal/runtime/code",
        "//internal/testutil",
    ],
)
