load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logstream",
    srcs = [
        "cancel.go",
        "decode.go",
        "dgramstream.go",
        "filestream.go",
        "logstream.go",
        "pipestream.go",
        "socketstream.go",
    ],
    importpath = "github.com/google/mtail/internal/tailer/logstream",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/logline",
        "//internal/waker",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_test(
    name = "logstream_test",
    size = "small",
    srcs = [
        "dgramstream_unix_test.go",
        "filestream_test.go",
        "filestream_unix_test.go",
        "pipestream_unix_test.go",
        "socketstream_unix_test.go",
    ],
    deps = [
        ":logstream",
        "//internal/logline",
        "//internal/testutil",
        "//internal/waker",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "@com_github_golang_glog//:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
