load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = [
        "driver.go",
        "lexer.go",
        "parser.go",
        "sexp.go",
        "tokens.go",
        "unparser.go",
    ],
    importpath = "github.com/google/mtail/internal/runtime/compiler/parser",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/metrics",
        "//internal/runtime/compiler/ast",
        "//internal/runtime/compiler/errors",
        "//internal/runtime/compiler/position",
        "//internal/runtime/compiler/symbol",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_test(
    name = "parser_test",
    srcs = [
        "lexer_test.go",
        "parser_test.go",
        "tokens_test.go",
    ],
    embed = [":parser"],
    deps = [
        "//internal/runtime/compiler/ast",
        "//internal/runtime/compiler/position",
        "//internal/testutil",
    ],
)
