load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "symbol",
    srcs = ["symtab.go"],
    importpath = "github.com/jaqx0r/mtail/internal/runtime/compiler/symbol",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/runtime/compiler/errors",
        "//internal/runtime/compiler/position",
        "//internal/runtime/compiler/types",
        "@com_github_golang_glog//:glog",
    ],
)

go_test(
    name = "symbol_test",
    size = "small",
    srcs = ["symtab_test.go"],
    embed = [":symbol"],
    deps = [
        "//internal/runtime/compiler/errors",
        "//internal/runtime/compiler/position",
        "//internal/testutil",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
