load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = [
        "regexp.go",
        "types.go",
    ],
    importpath = "github.com/google/mtail/internal/runtime/compiler/types",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)

go_test(
    name = "types_test",
    size = "small",
    srcs = ["types_test.go"],
    embed = [":types"],
    deps = ["//internal/testutil"],
)
